feat: add department to resources metadatas

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,8 @@
-node_modules
-coverage
-.nyc_output
-.nuxt
+/node_modules
+/coverage
+/.nyc_output
+/.nuxt
+/nuxt-dist
+/nuxt-dist-standalone
+/.git
+/data
