feat: work on home page search field

--- a/contract/config.json
+++ b/contract/config.json
@@ -761,6 +761,9 @@
           }, {
             "const": "rounded",
             "title": "arrondir"
+          }, {
+            "const": "outer-btn",
+            "title": "afficher un bouton d'action à droite"
           }]
         },
         "default": ["outlined", "rounded"]
